# github-template-cli

./: Cargo.toml
src/: main.rs
src/cmd/: create.rs  get_list.rs  mod.rs
