[package]
name = "template-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"]}
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
async-recursion = "1.0.4"
clap = { version = "4.3.21", features = ["derive"] }
